# why22

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yaml
.hooks/: pre-commit
api/: Cargo.toml
api/src/: auth.rs  client.rs  foreign.rs  foreign_rpc.rs  handlers.rs  json_rpc.rs  lib.rs  owner.rs  owner_rpc.rs  rest.rs  router.rs  types.rs
api/tests/: rest.rs
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  linked_list.rs  pibd_params.rs  pipe.rs  store.rs  txhashset.rs  types.rs
chain/tests/: bitmap_accumulator.rs  bitmap_segment.rs  chain_test_helper.rs  data_file_integrity.rs  mine_nrd_kernel.rs  mine_simple_chain.rs  nrd_validation_rules.rs  process_block_cut_through.rs  store_indices.rs  store_kernel_pos_index.rs  test_block_known.rs  test_coinbase_maturity.rs  test_get_kernel_height.rs  test_header_perf.rs  test_header_weight_validation.rs  test_pibd_copy.rs  test_pibd_validation.rs  test_txhashset.rs  test_txhashset_archive.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/src/: consensus.rs  core.rs  genesis.rs  global.rs  lib.rs  macros.rs  pow.rs  ser.rs
core/tests/: block.rs  common.rs  consensus_automated.rs  consensus_mainnet.rs  consensus_testnet.rs  core.rs  merkle_proof.rs  pmmr.rs  segment.rs  transaction.rs  vec_backend.rs
doc/: build.md  code_structure.md  coinbase_maturity.md  contracts.md  fast-sync.md  grin4bitcoiners.md  intro.md  merkle.md  mmr.md  pruning.md  rangeproof_byte_format.md  release_instruction.md  state.md  stratum.md  switch_commitment.md  table_of_contents.md  toc.md
doc/api/: api.md  node_api_v1.md
doc/chain/: blocks_and_headers.md  blocks_and_headers_KR.md  chain_sync.md  chain_sync_KR.md
doc/dandelion/: dandelion.md  dandelion_KR.md
doc/internal/: pool.md
doc/p2p/: p2p_protocol.md
doc/pow/: pow.md  pow_KR.md
doc/translations/: build_ES.md  build_JP.md  build_KR.md  build_ZH-CN.md  code_structure_ZH-CN.md  coinbase_maturity_KR.md  coinbase_maturity_ZH-CN.md  contracts_ZH-CN.md  fast-sync_ES.md  fast-sync_KR.md  fast-sync_ZH-CN.md  grin4bitcoiners_KR.md  grin4bitcoiners_ZH-CN.md  intro_DE.md  intro_ES.md  intro_JP.md  intro_KR.md  (+19 more)
etc/: Dockerfile  Dockerfile.testnet  crate-release.sh  shell.nix
keychain/: Cargo.toml
p2p/: Cargo.toml
pool/: Cargo.toml
servers/: Cargo.toml
store/: Cargo.toml
(+148 files in other folders)
