[package]
name = "why"
version = "5.3.0"
authors = ["Why Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/why"
keywords = [ "crypto", "why", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.why", "**/*.why2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "why"
path = "src/bin/why.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.11"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
cursive_table_view = "0.14.0"
humansize = "1.1.0"
serde = "1"
futures = "0.3.19"
serde_json = "1"
log = "0.4"
term = "0.6"

why_api = { path = "./api", version = "5.3.0" }
why_config = { path = "./config", version = "5.3.0" }
why_chain = { path = "./chain", version = "5.3.0" }
why_core = { path = "./core", version = "5.3.0" }
why_keychain = { path = "./keychain", version = "5.3.0" }
why_p2p = { path = "./p2p", version = "5.3.0" }
why_servers = { path = "./servers", version = "5.3.0" }
grin_util = { path = "./util", version = "5.3.0" }

[dependencies.cursive]
version = "0.20"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
why_chain = { path = "./chain", version = "5.3.0" }
why_store = { path = "./store", version = "5.3.0" }
