[package]
name = "why_config"
version = "5.3.0"
authors = ["Why Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for why, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/why"
keywords = [ "crypto", "why", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

why_core = { path = "../core", version = "5.3.0" }
why_servers = { path = "../servers", version = "5.3.0" }
why_p2p = { path = "../p2p", version = "5.3.0" }
grin_util = { path = "../util", version = "5.3.0" }

[dev-dependencies]
pretty_assertions = "0.6.1"
